tests/baselines/reference/genericGetter2.errors.txt
==== tests/cases/compiler/genericGetter2.ts (1 errors) ====
    class A<T> { }
    
    class C<T> {
        data: A<T>;
        get x(): A {
                 ~
!!! genericGetter2.ts(5,14): error TS2173: Generic type references must include all type arguments.
            return this.data;
        }
    }